src/objects/Work_Order__c.object
<CustomObject>
    <description>Consulting Work Order Custom Object (Not a standard FinancialForce object)</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <picklist>
            <picklistValues>
                <fullName>Abbi Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Collins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherri Pinkham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Bradski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirk Cameron</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <description>Customer reference for example order number, job number, representative&apos;s name</description>
        <label>Customer Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Value__c</fullName>
        <label>Gross Value</label>
        <summarizedField>Work_Order_Line_Item__c.Gross_Value__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Works Order has been invoiced</description>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <summarizedField>Work_Order_Line_Item__c.Net_Value__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the works order</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_1__c</fullName>
        <label>Tax Rate 1</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_3__c</fullName>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Value_1__c</fullName>
        <label>Tax Value 1</label>
        <summarizedField>Work_Order_Line_Item__c.Tax_Value_1__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Value_2__c</fullName>
        <label>Tax Value 2</label>
        <summarizedField>Work_Order_Line_Item__c.Tax_Value_2__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Value_3__c</fullName>
        <label>Tax Value 3</label>
        <summarizedField>Work_Order_Line_Item__c.Tax_Value_3__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <summarizedField>Work_Order_Line_Item__c.Total_Tax__c</summarizedField>
        <summaryForeignKey>Work_Order_Line_Item__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Processed__c</columns>
        <columns>NAME</columns>
        <columns>Payment_Method__c</columns>
        <columns>Date__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Consultant__c</columns>
        <columns>Status__c</columns>
        <columns>Net_Value__c</columns>
        <columns>Gross_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress_Projects</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Work_Orders_Yet_to_be_Processed</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Customer_Reference__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Work Orders Yet to be Processed</label>
    </listViews>
    <listViews>
        <fullName>Works_Order_Status</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Consultant__c</columns>
        <columns>Customer_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Works Order Status</label>
    </listViews>
    <listViews>
        <fullName>Works_Order_Values</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account__c</columns>
        <columns>Tax_Rate_1__c</columns>
        <columns>Tax_Rate_2__c</columns>
        <columns>Tax_Rate_3__c</columns>
        <columns>Tax_Value_1__c</columns>
        <columns>Tax_Value_2__c</columns>
        <columns>Tax_Value_3__c</columns>
        <columns>Net_Value__c</columns>
        <columns>Total_Tax__c</columns>
        <columns>Gross_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>Works Order Values</label>
    </listViews>
    <nameField>
        <displayFormat>CWO{000000}</displayFormat>
        <label>Work Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>